syntax = "proto3";
package CS201Game;
option java_package = "cs201game.protos";
option java_outer_classname = "LoginResponseProto";
option csharp_namespace = "Protos";

message LoginResponse { bool success = 1; }