syntax = "proto3";
package CS201Game;
option java_package = "cs201game.protos";
option java_outer_classname = "MessageTypeProto";
option csharp_namespace = "Protos";

message MessageType { int32 type = 1; }