syntax = "proto3";
package CS201Game;
option java_package = "cs201game.protos";
option java_outer_classname = "PlayerFinishProto";
option csharp_namespace = "Protos";

message PlayerFinish { double score = 1; }